--- a/files/cart_ajax_add.htm
+++ b/files/cart_ajax_add.htm
@@ -82,7 +82,7 @@
 		<a class="button5 removeAll" href="{CART_TRUNCATE_URL}" onclick="removeFromCartAll($(this))" title="Очистить корзину">
 			<span>Очистить</span>
 		</a>
-		<a href="{CART_URL}" class="button-primary" title="Перейти в Корзину"><span>В корзину</span></a>
+		<a href="{CART_URL}" class="button" title="Перейти в Корзину"><span>В корзину</span></a>
 	</div>
 </div>
 
