--- a/files/order.htm
+++ b/files/order.htm
@@ -51,15 +51,15 @@
       <div class="orderStrageContent__block form__list">
         <div class="form__fields">
           <label for="sites_client_person">Ваше Имя</label>
-          <input id="sites_client_person" type="text" name="form[contact][person]" value="{ORDER_FORM_CONTACT_PERSON}" maxlength="100" class="form__input" type="text" placeholder="ФИО" required/>
+          <input id="sites_client_person" type="text" name="form[contact][person]" value="{ORDER_CONTACT_PERSON}" maxlength="100" class="form__input" type="text" placeholder="ФИО" required/>
         </div>
         <div class="form__fields">
           <label for="sites_client_phone">Телефон для связи</label>
-          <input id="sites_client_phone" type="tel" name="form[contact][phone]" value="{ORDER_FORM_CONTACT_PHONE}" maxlength="255" class="form__input form__phone" type="text" placeholder="+7 (987) 654-3210" required/>
+          <input id="sites_client_phone" type="tel" name="form[contact][phone]" value="{ORDER_CONTACT_PHONE}" maxlength="255" class="form__input form__phone" type="text" placeholder="+7 (987) 654-3210" required/>
         </div>
         <div class="form__fields">
           <label for="sites_client_email">Ваш E-mail</label>
-          <input id="sites_client_email" type="email" name="form[contact][email]" value="{ORDER_FORM_CONTACT_EMAIL}" maxlength="255" class="form__input" type="text" placeholder="email@email.ru" {% IF ORDER_FORM_CONTACT_WANT_REGISTER %}required{% ENDIF %}/>
+          <input id="sites_client_email" type="email" name="form[contact][email]" value="{ORDER_CONTACT_EMAIL}" maxlength="255" class="form__input" type="text" placeholder="email@email.ru" {% IF ORDER_FORM_CONTACT_WANT_REGISTER %}required{% ENDIF %}/>
         </div>
         {% IFNOT CLIENT_IS_LOGIN %}
         <div class="form__fields form__pass" {% IFNOT ORDER_FORM_CONTACT_WANT_REGISTER %}style="display: none;"{% ENDIF %}>
@@ -203,7 +203,7 @@
           </div>
 	        <div class="form__fields two flex">
             <div class="form__field deliveryConvenientDate selectBox {% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}required{% ENDIF %}">
-              <label for="deliveryConvenientDate"><span>Время доставки</span>{% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}<em>*</em>{% ENDIF %}</label>
+              <label><span>Время доставки</span>{% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}<em>*</em>{% ENDIF %}</label>
               <select class="form__input select" name="form[delivery][convenient_time_from]">
                 {% FOR convenient_time_from_list %}
                 <option value="{convenient_time_from_list.HOUR_INT}" {% IF convenient_time_from_list.SELECTED %}selected="selected"{% ENDIF %}>{convenient_time_from_list.HOUR}</option>
@@ -211,7 +211,7 @@
               </select>
             </div>
             <div class="form__field deliveryConvenientDate selectBox {% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}required{% ENDIF %}">
-              <label for="deliveryConvenientDate"><span>Время доставки</span>{% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}<em>*</em>{% ENDIF %}</label>
+              <label><span>Время доставки</span>{% IF SETTINGS_ORDER_FIELDS_CONVENIENT_TIME=1 %}<em>*</em>{% ENDIF %}</label>
               <select class="form__input select" name="form[delivery][convenient_time_to]">
                 {% FOR convenient_time_to_list %}
                 <option value="{convenient_time_to_list.HOUR_INT}" {% IF convenient_time_to_list.SELECTED %}selected="selected"{% ENDIF %}>{convenient_time_to_list.HOUR}</option>
