--- a/files/goods_list.htm
+++ b/files/goods_list.htm
@@ -119,8 +119,8 @@
 					<!-- Фильтры по свойствам товарных модификаций (Например: Цвет, размер, модификация) {% FOR values %}{% IF filter_prop_list.values.CHECKED %}active {% ENDIF %}{% ENDFOR %} -->
 					{% FOR filter_prop_list %}
 					<div class="filter__list collapsible {% FOR values %}{% IF filter_prop_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}">
-						<div class="filter__content collapsible__click">
-							<a class="filter__name" href="javascript:;">
+						<div class="filter__content">
+							<a class="filter__name collapsible__click" href="javascript:;">
 								<span>{filter_prop_list.NAME}</span>
 							</a>
 							<div class="filter__values collapsible__click">
@@ -637,13 +637,13 @@
 						<div class="product__addCart {% IF goods.IS_HAS_IN_COMPARE_LIST || goods.IS_HAS_IN_FAVORITES_LIST %}added{% ENDIF %}">
 							<!-- Рейтинг -->
 							{% IFNOT SETTINGS_OPINION_DISABLE %}
-							<div class="product__ratings flex {% IF index_page_sale_goods.OPINION_RATING_VALUE %}has-rating{% ENDIF %}">
+							<div class="product__ratings flex {% IF goods.OPINION_RATING_VALUE %}has-rating{% ENDIF %}">
 								<div class="product__ratings-icon">
 									<i class="icon-star2"></i>
 								</div>
 								<div class="product__ratings-value">
-									{% IF index_page_sale_goods.OPINION_RATING_VALUE %}
-										{index_page_sale_goods.OPINION_RATING_VALUE | divide("2")}
+									{% IF goods.OPINION_RATING_VALUE %}
+										{goods.OPINION_RATING_VALUE | divide("2")}
 									{% ELSE %}
 										0
 									{% ENDIF %}
