--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -342,6 +342,7 @@
 				</div>
 				<!-- Корзина: Оформление -->
 				<div class="total__buttons">
+			    <input type="hidden" name="hash" value="{HASH}" />
 					<a id="makeOrder" class="button disabled" title="Перейти к быстрому оформлению заказа"><span>Оформить </span><span>заказ</span></a>
 					<div class="total__pp">
 						<span>Нажимая на кнопку &laquo;Оформить заказ&raquo;, Вы соглашаетесь</span>
