--- a/files/goods_list.htm
+++ b/files/goods_list.htm
@@ -35,7 +35,7 @@
 	<div id="filters" class="filters">
 		<div class="filters__icon flex-center">
 			<span class="filters__count"></span>
-			<span class="filters__label">Добавить фильтры</span>
+			<span class="filters__label">Выбрать фильтры</span>
 			<i class="icon-plus"></i>
 		</div>
 		<div class="filters__content {% FOR filter_attr_list %}{% FOR values %}{% IF filter_attr_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}{% ENDFOR %} {% FOR filter_prop_list %}{% FOR values %}{% IF filter_prop_list.values.CHECKED %}has-filters {% ENDIF %}{% ENDFOR %}{% ENDFOR %}">
