--- a/files/html.htm
+++ b/files/html.htm
@@ -1775,12 +1775,12 @@
 			<div class="container">
 				<div class="instagram__inner">
 					<div class="instagram__items">
-						<a class="instagram__item lozad" data-background-image="{ASSETS_IMAGES_PATH}inst_1.jpg?design=THEMENAME" href="#"></a>
-						<a class="instagram__item lozad" data-background-image="{ASSETS_IMAGES_PATH}inst_2.jpg?design=THEMENAME" href="#"></a>
-						<a class="instagram__item lozad" data-background-image="{ASSETS_IMAGES_PATH}inst_3.jpg?design=THEMENAME" href="#"></a>
-						<a class="instagram__item lozad" data-background-image="{ASSETS_IMAGES_PATH}inst_4.jpg?design=THEMENAME" href="#"></a>
+						<a class="instagram__item lozad" data-background-image="{ASSETS_IMAGES_PATH}inst_1.jpg?design=THEMENAME" href="https://www.instagram.com/" target="_blank"></a>
+						<a class="instagram__item lozad" data-background-image="{ASSETS_IMAGES_PATH}inst_2.jpg?design=THEMENAME" href="https://www.instagram.com/" target="_blank"></a>
+						<a class="instagram__item lozad" data-background-image="{ASSETS_IMAGES_PATH}inst_3.jpg?design=THEMENAME" href="https://www.instagram.com/" target="_blank"></a>
+						<a class="instagram__item lozad" data-background-image="{ASSETS_IMAGES_PATH}inst_4.jpg?design=THEMENAME" href="https://www.instagram.com/" target="_blank"></a>
 					</div>
-					<a class="instagram__links flex" href="#">
+					<a class="instagram__links flex" href="https://www.instagram.com/" target="_blank">
 						<div class="instagram__links-label">
 							<img src="{ASSETS_IMAGES_PATH}insta.png?design=THEMENAME" />
 						</div>
