--- a/files/order_fast.htm
+++ b/files/order_fast.htm
@@ -45,7 +45,7 @@
 								<div class="form__fields form__pass" {% IFNOT ORDER_FORM_CONTACT_WANT_REGISTER %}style="display: none;"{% ENDIF %}>
 									<label for="sites_client_pass" class="required"><span>Ваш пароль</span><em>*</em></label>
 									<input id="sites_client_pass" type="password" name="form[contact][pass]" value="{ORDER_FORM_CONTACT_PASS}" maxlength="50" minlength="6" class="form__input {% IF ORDER_FORM_CONTACT_WANT_REGISTER %}required{% ENDIF %}" onkeyup="checkCapsWarning(event)" onfocus="checkCapsWarning(event)" onblur="removeCapsWarning()" placeholder="Придумайте пароль *"/>
-									<div class="showPassBlock"><a href="#" rel="Скрыть пароль" class="showPass">Показать пароль</a></div>
+									<a class="showPassBlock" href="#" rel="Скрыть пароль">Показать пароль</a>
 									<div id="capslock">
 										<div><i class="icon-warning"></i></div>
 										<div><strong>Caps Lock включен.</strong></div>
