--- a/files/order.htm
+++ b/files/order.htm
@@ -65,7 +65,7 @@
         <div class="form__fields form__pass" {% IFNOT ORDER_FORM_CONTACT_WANT_REGISTER %}style="display: none;"{% ENDIF %}>
           <label for="sites_client_pass">Придумайте пароль</label>
           <input id="sites_client_pass" type="password" name="form[contact][pass]" value="{ORDER_FORM_CONTACT_PASS}" maxlength="50" minlength="6" class="form__input {% IF ORDER_FORM_CONTACT_WANT_REGISTER %}required{% ENDIF %}" onkeyup="checkCapsWarning(event)" onfocus="checkCapsWarning(event)" onblur="removeCapsWarning()" placeholder="Придумайте пароль *"/>
-          <a class="showPassBlock" href="#" rel="Скрыть пароль">Показать пароль</a>
+          <a class="showPassBlock" href="#" rel="Скрыть пароль"></a>
           <div id="capslock"> 
             <div><i class="icon-warning"></i></div>
             <div><strong>Caps Lock включен.</strong></div>
